--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
     "start": "vite"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-virtuoso": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.9",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.0.0",
     "prettier": "^2.8.8",
     "typescript": "^5.1.3",
+    "unocss": "^0.53.1",
     "vite": "^4.3.9"
   }
 }
