--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-aria-components": "^1.0.0-alpha.5",
     "react-virtuoso": "^4.3.9"
   },
   "devDependencies": {
