Add vite build npm script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "infinite-calendar",
   "version": "1.0.0",
   "scripts": {
-    "start": "vite"
+    "start": "vite",
+    "build": "vite build"
   },
   "dependencies": {
     "date-fns": "^2.30.0",
